Add point on map Base End and Start , fixig problem witch chosing star fly but we have problem with algoritm

--- a/qml.qrc
+++ b/qml.qrc
@@ -3,7 +3,7 @@
         <file>main.qml</file>
         <file>Plane.qml</file>
         <file>airplane.png</file>
-        <file>Point.qml</file>
         <file>marker.png</file>
+        <file>Фон.png</file>
     </qresource>
 </RCC>
